// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/PermalinkView should match snapshot 1`] = `
<div
  className="app__content"
  id="app-content"
>
  <withRouter(Connect(injectIntl(ChannelHeader)))
    channelId="channel_id"
  />
  <withRouter(Connect(PostView))
    channelId="channel_id"
    focusedPostId="post_id"
  />
  <div
    id="archive-link-home"
  >
    <Link
      className="a11y__region"
      data-a11y-sort-order="2"
      innerRef={
        Object {
          "current": null,
        }
      }
      to="/team_name/channels/channel_name"
    >
      <FormattedMessage
        defaultMessage="Click here to jump to recent messages. "
        id="center_panel.recent"
        values={Object {}}
      />
      <LocalizedIcon
        className="fa fa-arrow-down"
        component="i"
        title={
          Object {
            "defaultMessage": "Jump to recent messages Icon",
            "id": "center_panel.recent.icon",
          }
        }
      />
    </Link>
  </div>
</div>
`;

exports[`components/PermalinkView should match snapshot with archived channel 1`] = `
<div
  className="app__content"
  id="app-content"
>
  <withRouter(Connect(injectIntl(ChannelHeader)))
    channelId="channel_id"
  />
  <withRouter(Connect(PostView))
    channelId="channel_id"
    focusedPostId="post_id"
  />
  <div
    id="archive-link-home"
  >
    <Link
      className="a11y__region"
      data-a11y-sort-order="2"
      innerRef={
        Object {
          "current": null,
        }
      }
      to="/team_name/channels/channel_name"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="You are viewing an **archived channel**. "
        id="center_panel.permalink.archivedChannel"
      />
      <FormattedMessage
        defaultMessage="Click here to jump to recent messages. "
        id="center_panel.recent"
        values={Object {}}
      />
      <LocalizedIcon
        className="fa fa-arrow-down"
        component="i"
        title={
          Object {
            "defaultMessage": "Jump to recent messages Icon",
            "id": "center_panel.recent.icon",
          }
        }
      />
    </Link>
  </div>
</div>
`;
